--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   },
   "homepage": "https://github.com/realTranQuocBao/RestApiSwagger#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^1.11.1"
   }
 }
